--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@sveltejs/kit": "^2.22.0",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/vite": "^4.0.0",
-    "bits-ui": "^2.8.10",
+    "bits-ui": "^2.8.11",
     "clsx": "^2.1.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -42,6 +42,10 @@
     ]
   },
   "dependencies": {
+    "@zag-js/progress": "^1.18.3",
+    "@zag-js/svelte": "^1.18.3",
+    "cytoscape": "^3.32.1",
+    "cytoscape-dagre": "^2.5.0",
     "firebase": "^11.10.0",
     "mode-watcher": "^1.1.0"
   }
