--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@internationalized/date": "^3.8.2",
     "@lucide/svelte": "^0.515.0",
     "@sveltejs/adapter-auto": "^6.0.0",
-    "@sveltejs/kit": "^2.37.0",
+    "@sveltejs/kit": "latest",
     "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "@tailwindcss/vite": "^4.0.0",
     "bits-ui": "^2.8.11",
@@ -29,12 +29,12 @@
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.38.6",
+    "svelte": "latest",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^1.0.0",
+    "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.0.0",
     "tw-animate-css": "^1.3.5",
-    "vite": "^7.0.4"
+    "vite": "latest"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
