--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
     "@internationalized/date": "^3.8.2",
-    "@lucide/svelte": "^0.515.0",
+    "@lucide/svelte": "^0.544.0",
     "@sveltejs/adapter-auto": "^6.0.0",
     "@sveltejs/kit": "latest",
     "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "@tailwindcss/vite": "^4.0.0",
-    "bits-ui": "^2.8.11",
+    "bits-ui": "^2.11.0",
     "clsx": "^2.1.1",
+    "embla-carousel-svelte": "8",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
@@ -32,7 +33,7 @@
     "svelte": "latest",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.3.5",
     "vite": "latest"
   },
