--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@internationalized/date": "^3.8.2",
     "@lucide/svelte": "^0.544.0",
     "@sveltejs/adapter-auto": "^6.0.0",
+    "@sveltejs/adapter-node": "^5.4.0",
+    "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "latest",
     "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "@tailwindcss/vite": "^4.0.0",
@@ -47,8 +49,11 @@
     "@zag-js/svelte": "^1.18.3",
     "cytoscape": "^3.32.1",
     "cytoscape-dagre": "^2.5.0",
+    "express": "^5.1.0",
     "firebase": "^11.10.0",
     "matanim": "link:../../../../Library/pnpm/global/5/node_modules/matanim",
-    "mode-watcher": "^1.1.0"
+    "mode-watcher": "^1.1.0",
+    "serverless-http": "^4.0.0",
+    "svelte-toolbelt": "0.10.3"
   }
 }
