--- a/pnpm-lock 2.yaml
+++ b/pnpm-lock 2.yaml
@@ -23,9 +23,9 @@ importers:
       firebase:
         specifier: ^11.10.0
         version: 11.10.0
-      matanim:
-        specifier: link:../../../../Library/pnpm/global/5/node_modules/matanim
-        version: link:../../../../Library/pnpm/global/5/node_modules/matanim
+      # matanim:
+      #   specifier: link:../../../../Library/pnpm/global/5/node_modules/matanim
+      #   version: link:../../../../Library/pnpm/global/5/node_modules/matanim
       mode-watcher:
         specifier: ^1.1.0
         version: 1.1.0(svelte@5.39.11)
