--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@zag-js/progress": "^1.18.3",
     "@zag-js/svelte": "^1.18.3",
+    "amplify-adapter": "^1.2.3",
     "cytoscape": "^3.32.1",
     "cytoscape-dagre": "^2.5.0",
     "express": "^5.1.0",
